test/regression/issue/__snapshots__/03830.test.ts.snap
// Bun Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`macros should not lead to seg faults under any given input 1`] = `
"2 | fn(\`©\${Number(0)}\`);
    ^
error: "Cannot convert argument type to JS" error in macro
    at [dir]/index.ts:2:1"
`;
